--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,5 @@
-plugins {
-    id 'com.android.application'
-    id 'org.jetbrains.kotlin.android'
-}
+apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
 
 android {
     namespace 'com.relax.sounds'
@@ -23,21 +21,15 @@ android {
         kotlinCompilerExtensionVersion '1.4.3'
     }
 
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_17
-        targetCompatibility JavaVersion.VERSION_17
-    }
-
     kotlinOptions {
         jvmTarget = '17'
     }
 }
 
 dependencies {
-    // استفاده از فرمت جدید برای تعریف کتابخانه‌ها
-    implementation "androidx.core:core-ktx:1.10.1"
-    implementation "androidx.activity:activity-compose:1.7.2"
+    implementation 'androidx.core:core-ktx:1.10.1'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
+    implementation 'androidx.activity:activity-compose:1.7.2'
     implementation "androidx.compose.ui:ui:1.4.3"
     implementation "androidx.compose.material3:material3:1.1.0"
-    implementation "androidx.compose.ui:ui-tooling-preview:1.4.3"
 }
