--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,11 +14,14 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
 
-      - name: Build with Gradle
-        # ابتدا اجازه اجرا به فایل می‌دهیم، سپس آن را اجرا می‌کنیم
-        run: |
-          chmod +x gradlew
-          ./gradlew assembleDebug --no-daemon
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@v3
+        with:
+          gradle-version: 8.1.1 # اجبار به استفاده از نسخه سالم
+
+      - name: Build APK
+        # اینجا دیگر از ./gradlew استفاده نمی‌کنیم، از خودِ gradle نصب شده استفاده می‌کنیم
+        run: gradle assembleDebug --no-daemon
 
       - name: Upload APK
         uses: actions/upload-artifact@v4
