--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,9 +27,8 @@ android {
 }
 
 dependencies {
-    implementation 'androidx.core:core-ktx:1.10.1'
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
-    implementation 'androidx.activity:activity-compose:1.7.2'
+    implementation "androidx.core:core-ktx:1.10.1"
+    implementation "androidx.activity:activity-compose:1.7.2"
     implementation "androidx.compose.ui:ui:1.4.3"
     implementation "androidx.compose.material3:material3:1.1.0"
 }
