--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,10 +17,9 @@ jobs:
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v3
         with:
-          gradle-version: 8.1.1 # اجبار به استفاده از نسخه سالم
+          gradle-version: 8.1.1 # این خط دهن نسخه ۹ رو می‌بنده!
 
       - name: Build APK
-        # اینجا دیگر از ./gradlew استفاده نمی‌کنیم، از خودِ gradle نصب شده استفاده می‌کنیم
         run: gradle assembleDebug --no-daemon
 
       - name: Upload APK
