--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,5 @@
 apply plugin: 'com.android.application'
-apply plugin: 'kotlin-android'
+apply plugin: 'org.jetbrains.kotlin.android'
 
 android {
     namespace 'com.relax.sounds'
@@ -18,7 +18,8 @@ android {
     }
     
     composeOptions {
-        kotlinCompilerExtensionVersion '1.4.3'
+        // این نسخه دقیقاً با کاتلین 1.8.20 سازگاره
+        kotlinCompilerExtensionVersion '1.4.5'
     }
 
     kotlinOptions {
@@ -31,4 +32,5 @@ dependencies {
     implementation "androidx.activity:activity-compose:1.7.2"
     implementation "androidx.compose.ui:ui:1.4.3"
     implementation "androidx.compose.material3:material3:1.1.0"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.6.1"
 }
