--- a/build.gradle
+++ b/build.gradle
@@ -9,9 +9,4 @@ buildscript {
     }
 }
 
-allprojects {
-    repositories {
-        google()
-        mavenCentral()
-    }
-}
+// این فایل باید همین‌قدر خلوت باشد!
